RESOLVED FIXED309252
[WPE][GTK] Scrolling slowly with finger doesn't work
https://bugs.webkit.org/show_bug.cgi?id=309252
Summary [WPE][GTK] Scrolling slowly with finger doesn't work
Vitaly Dyackhov
Reported 2026-03-05 06:11:30 PST
Created attachment 478565 [details] Test page When scrolling with a finger on touch screen very slowly, so that delta is less than 1.0, the page doesn't move. It's a result of rounding scroll position in `ThreadedScrollingTreeScrollingNodeDelegate::adjustedScrollPosition()`. Note that iOS doesn't use `ThreadedScrollingTreeScrollingNodeDelegate` and in the base `ScrollingTreeScrollingNodeDelegate` class implementation `adjustedScrollPosition()` returns unmodified position.
Attachments
Test page (1.91 KB, text/html)
2026-03-05 06:11 PST, Vitaly Dyackhov
no flags
Vitaly Dyackhov
Comment 1 2026-03-13 08:45:02 PDT
EWS
Comment 2 2026-03-16 05:50:29 PDT
Committed 309315@main (e7e61af4273f): <https://commits.webkit.org/309315@main> Reviewed commits have been landed. Closing PR #60560 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-16 05:51:11 PDT
Note You need to log in before you can comment on or make changes to this bug.