Cherry-pick 309315@main (e7e61af4273f). https://bugs.webkit.org/show_bug.cgi?id=309252

[WPE][GTK] Scrolling slowly with finger doesn't work
    https://bugs.webkit.org/show_bug.cgi?id=309252

    Reviewed by Carlos Garcia Campos.

    When scrolling slowly with touch input, the delta values can be very
    small. Rounding these small delta values to integers can cause the
    scroll position to not update, which can make the scrolling feel
    unresponsive.

    This patch adds overridden `adjustedScrollPosition()` method of the
    `ScrollingTreeScrollingNodeDelegateCoordinated` to return the original
    position without rounding on WPE and GTK, allowing for smoother
    scrolling even with small delta values.

    * Source/WebCore/page/scrolling/coordinated/ScrollingTreeScrollingNodeDelegateCoordinated.cpp:
    (WebCore::ScrollingTreeScrollingNodeDelegateCoordinated::adjustedScrollPosition const):
    * Source/WebCore/page/scrolling/coordinated/ScrollingTreeScrollingNodeDelegateCoordinated.h:

    Canonical link: https://commits.webkit.org/309315@main

Canonical link: https://commits.webkit.org/298234.499@webkitglib/2.50