Source/WebCore/page/scrolling/coordinated/ScrollingTreeScrollingNodeDelegateCoordinated.h
@@ -38,6 +38,8 @@ public:
     explicit ScrollingTreeScrollingNodeDelegateCoordinated(ScrollingTreeScrollingNode&, bool scrollAnimatorEnabled);
     virtual ~ScrollingTreeScrollingNodeDelegateCoordinated();
 
+    FloatPoint adjustedScrollPosition(const FloatPoint&) const override;
+
     void updateVisibleLengths();
     bool handleWheelEvent(const PlatformWheelEvent&);
 
